--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -9,10 +9,12 @@
     <h1>Mis tareas</h1>
     <form action="/" method="post">
         <input type="text" name="title" placeholder="Título">
-        <input type="text" name="title" placeholder="Descripción">
+        <input type="text" name="desc" placeholder="Descripcion">
         <input type="date" name="date"><br/>
         <input type="submit" value="Enviar">
-
     </form>
+
+
+
 </body>
 </html>
