--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -19,6 +19,6 @@
             {% endfor %}
         </table>
         <br/>
-        <a class="Boton_añadir" href="/newtask">Añadir Tarea</a>
+        <input type="button" value="Añadir Tarea" onClick=" window.location.href='/newtask'">
     </form>
 {% endblock %}
