--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,24 +1,40 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Nueva Tarea</title>
-    <link rel="stylesheet" href="/static/css/styles.css">
-</head>
-<body>
-    <header>Nueva tarea</header>
+{% extends 'base.html' %}
+
+{% block title %} Nueva Tarea {% endblock %}
+
+{% block content %}
+    <h1>Nueva tarea</h1>
+
     <form action="/newtask" method="post"><br/>
-        <input type="text" name="title" placeholder="Título">
-        <input type="text" name="desc" placeholder="Descripcion">
-        <input type="date" name="date"><br/>
-        <br/>
-        <input type="submit" value="Enviar">
+        {{ form.hidden_tag() }}
+        <div class="row">
+            <div class="six columns">
+                {{ form.title(class="u-full-width", placeholder="Título") }}
+                {% if form.title.errors %}
+                    {% for error in form.title.errors %}
+                        <p class='field-error'>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div class="six columns">
+                {{ form.date(class="u-full-width", type="date")}}
+                {% if form.date.errors %}
+                    {% for error in form.date.errors %}
+                        <p class='field-error'>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+        <div class="row">
+            {{ form.description(class="u-full-width", placeholder="Descripcion")}}
+            {% if form.description.errors %}
+                    {% for error in form.description.errors %}
+                        <p class='field-error'>{{ error }}</p>
+                    {% endfor %}
+            {% endif %}
+        </div>
+
+        {{ form.submit(class="button-primary") }}
     </form>
 
-    <footer>
-        &copy; 2020 - Todos los derechos reservados
-    </footer>
-
-</body>
-</html>
+{% endblock %}
