Completadas funciones a falta de conexión con BBDD

--- a/tasks/static/css/styles.css
+++ b/tasks/static/css/styles.css
@@ -3,3 +3,9 @@
     font-size: 0.8em;
     margin-top: -12px;
 }
+
+.logo {
+    color: royalblue;
+    font-size: larger;
+    margin-left: 12px;
+}
