--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -1,22 +1,26 @@
-{% extends 'base.html' %}
-
+{% extends "base.html" %}
 {% block title %} Mis tareas {% endblock %}
-
 {% block content %}
     <h1>Mis tareas</h1>
+    <form action="/processtask">
         <table class="u-full-width">
             <tr>
+                <th>#</th>
                 <th>Título</th>
                 <th>Descripción</th>
                 <th>Fecha</th>
             </tr>
             {% for data in registros %}
             <tr>
+                <td><input type="radio" name="ix" value="{{loop.index}}" ></td>
                 <td>{{data[0]}}</td>
                 <td>{{data[1]}}</td>
                 <td>{{data[2]}}</td>
             </tr>
             {% endfor %}
         </table>
+        <button class="button-primary" name="btnModificar" type="submit">Modificar</button>
+        <button class="button-primary" name="btnBorrar" type="submit">Borrar</button>
         <a class="button button-primary u-pull-right" href="/newtask">Nueva tarea</a>
+    </form>
 {% endblock %}
