--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -12,10 +12,10 @@
             </tr>
             {% for data in registros %}
             <tr>
-                <td><input type="radio" name="ix" value="{{loop.index}}" ></td>
-                <td>{{data[0]}}</td>
-                <td>{{data[1]}}</td>
-                <td>{{data[2]}}</td>
+                <td><input type="radio" name="ix" value="{{data['id']}}" ></td>
+                <td>{{data['titulo']}}</td>
+                <td>{{data['descripcion']}}</td>
+                <td>{{data['fecha']}}</td>
             </tr>
             {% endfor %}
         </table>
