--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -17,8 +17,8 @@
                 {% endif %}
             </div>
             <div class="six columns">
-                {{ form.date(class="u-full-width", type="date")}}
-                {% if form.date.errors %}
+                {{ form.fx(class="u-full-width", type="date")}}
+                {% if form.fx.errors %}
                     {% for error in form.date.errors %}
                         <p class='field-error'>{{ error }}</p>
                     {% endfor %}
