--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -1,14 +1,13 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
-{% block title %} Nueva Tarea {% endblock %}
+{% block title %} Nueva tarea {% endblock %}
 
 {% block content %}
     <h1>Nueva tarea</h1>
-
-    <form action="/newtask" method="post"><br/>
+    <form action="/newtask" method="post">
         {{ form.hidden_tag() }}
         <div class="row">
-            <div class="six columns">
+            <div class="four columns">
                 {{ form.title(class="u-full-width", placeholder="Título") }}
                 {% if form.title.errors %}
                     {% for error in form.title.errors %}
@@ -16,25 +15,34 @@
                     {% endfor %}
                 {% endif %}
             </div>
-            <div class="six columns">
-                {{ form.fx(class="u-full-width", type="date")}}
+            <div class="four columns">
+                {{ form.fx(class='u-full-width', type="date") }}
                 {% if form.fx.errors %}
-                    {% for error in form.date.errors %}
+                    {% for error in form.fx.errors %}
+                        <p class='field-error'>{{ error }}</p>
+                    {% endfor %}
+                {% endif %}
+            </div>
+            <div class="four columns">
+                {{ form.id_employee(class='u-full-width') }}
+                {% if form.id_employee.errors %}
+                    {% for error in form.id_employee.errors %}
                         <p class='field-error'>{{ error }}</p>
                     {% endfor %}
                 {% endif %}
             </div>
         </div>
         <div class="row">
-            {{ form.description(class="u-full-width", placeholder="Descripcion")}}
+            {{ form.description(class="u-full-width", placeholder="Descripción") }}
             {% if form.description.errors %}
-                    {% for error in form.description.errors %}
-                        <p class='field-error'>{{ error }}</p>
-                    {% endfor %}
+                {% for error in form.description.errors %}
+                    <p class='field-error'>{{ error }}</p>
+                {% endfor %}
             {% endif %}
-        </div>
 
+        </div>
         {{ form.submit(class="button-primary") }}
+        <!--input type="submit" class="button-primary" value="Enviar"-->
     </form>
 
 {% endblock %}
