--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -11,17 +11,12 @@
 </head>
 <body>
     <header>
-        <a href="/" class="logo">Mis tareas</a>
+        <a href="/" class="logo">Mis tareas</a> | <a href="/employees">Empleados</a>
     </header>
-
+    <!--nav><a class="boton" href="/">Inicio</a> | <a class="boton" href="/newtask">Añadir tarea</a></nav-->
     <section class="container">
         {% block content %}{% endblock %}
     </section>
-    <br>
-    <br>
-    <footer>
-        &copy; 2020 - Todos los derechos reservados
-    </footer>
-
+    <footer>&copy 2020 - Todos los derechos reservados</footer>
 </body>
 </html>
